--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.SplashScreenActivity">
+
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -20,9 +21,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.InformationActivity" />
-        <activity android:name=".activity.MenuActivity" />
-        <activity android:name=".activity.MainActivity" />
-        <activity android:name=".activity.Participants"/>
     </application>
 
 </manifest>
